--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
-# 
-version: '3'
-# 
-services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - 8000:8000
-    volumes:
-      - .:/app
-    command: python manage.py runserver 0.0.0.0:8000
+version: "3.8"
 
+services:
+  web:
+    image: your-dockerhub-username/your-django-app:latest
+    container_name: django_app
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    command: >
+      gunicorn config.wsgi:application
+      --bind 0.0.0.0:8000
+      --workers 2
